--- a/css/add_task_container.css
+++ b/css/add_task_container.css
@@ -159,3 +159,28 @@ body {
     left: 995.25px;
     top: 889px;
 }
+
+.input-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+    width: 440px;
+    height: 80px;
+    left: 0px;
+    top: 336px;
+}
+
+.todo-subtask-container {
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+#subtask-container {
+    padding-inline-start: 0px;
+    min-height: 135px;
+    overflow: auto;
+}
