--- a/css/add_task.css
+++ b/css/add_task.css
@@ -410,21 +410,29 @@ li p {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
     z-index: 1;
     max-height: 170px;
     overflow-y: auto;
     width: 438px;
 }
 
+.selectedDropdownContent {
+    background-color: #2A3647;
+    color: #FFFFFF;
+    
+}
+
 .dropdownContent span {
-    display: block;
-    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 16px 8px 18px;
     cursor: pointer;
 }
 
 .dropdownContent span:hover {
-    background-color: #ddd;
+    background-color: #29ABE2;
 }
 
 .show {
@@ -436,6 +444,7 @@ li p {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+    padding: 8px;
 }
 
 .selectedContact {
