--- a/css/add_task.css
+++ b/css/add_task.css
@@ -309,11 +309,13 @@ button {
     background-color: #a8a8a8;
     margin: 0 6px;
 }
+
 .todo-subtask::before {
     content: '•';
     position: absolute;
     top: calc(50% - 11px);
-} 
+}
+
 .todo-subtask {
     align-items: center;
     padding: 6px 20px;
@@ -346,11 +348,11 @@ button {
 }
 
 .todo-subtask:hover .subtask-imgs {
-	visibility: visible;
+    visibility: visible;
 }
 
 li p {
-	margin-left: 16px;
+    margin-left: 16px;
 }
 
 .d-flex {
@@ -366,12 +368,9 @@ li p {
 }
 
 .todo-subtask:hover {
-	background-color: #eeeeee;
+    background-color: #eeeeee;
 }
 
-
-
-/* Dropdown-Menü */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -402,7 +401,6 @@ li p {
     position: absolute;
     width: 24px;
     cursor: pointer;
-    /* background-color: #597296; */
     right: 8px;
 }
 
@@ -410,7 +408,7 @@ li p {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     max-height: 170px;
     overflow-y: auto;
@@ -420,7 +418,7 @@ li p {
 .selectedDropdownContent {
     background-color: #2A3647;
     color: #FFFFFF;
-    
+
 }
 
 .dropdownContent span {
@@ -439,7 +437,6 @@ li p {
     display: block;
 }
 
-/* Ausgewählte Kontakte */
 .selectedContactsContainer {
     display: flex;
     flex-wrap: wrap;
