--- a/css/contacts.css
+++ b/css/contacts.css
@@ -61,17 +61,19 @@ body {
 .rightContainer {
     display: flex;
     width: 100%;
-    background-color: rgb(246,247,248);
+    background-color: rgb(246, 247, 248);
     flex-direction: column;
 }
 
 
-.betterWaT, .contactAddedSuccesfully {
+.betterWaT,
+.contactAddedSuccesfully {
     position: relative;
     width: 569px;
     height: 73px;
     display: flex;
-    opacity: 0;  /* Startet unsichtbar */
+    opacity: 0;
+    /* Startet unsichtbar */
     transition: opacity 0.5s ease-in-out;
 }
 
@@ -83,11 +85,13 @@ body {
 .contactAddedSuccesfully {
     top: 110px;
     left: 200px;
-    display: none; /* Initial versteckt */
+    display: none;
+    /* Initial versteckt */
 }
 
 .show {
-    opacity: 1; /* Volle Sichtbarkeit */
+    opacity: 1;
+    /* Volle Sichtbarkeit */
 }
 
 
@@ -216,7 +220,7 @@ body {
     padding: 20px;
     align-items: center;
     padding-left: 30px;
-}   
+}
 
 .firstLetterFromContacts p {
     font-size: 20px;
@@ -242,7 +246,7 @@ body {
     cursor: pointer;
 }
 
-.contactChamberLeftContainer img  {
+.contactChamberLeftContainer img {
     height: 42px;
     width: 42px;
 }
@@ -279,8 +283,8 @@ body {
 }
 
 
-  
-  #targetArea {
+
+#targetArea {
     position: relative;
     width: 500px;
     height: 522px;
@@ -291,7 +295,7 @@ body {
 
 .container {
     position: fixed;
-    display: none; 
+    display: none;
     z-index: 101;
     top: 0;
     left: 0;
@@ -301,47 +305,49 @@ body {
     align-items: center;
     visibility: hidden;
     opacity: 0;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
     transition: opacity 0.5s, visibility 0.5s;
-  }
-  
-  .panel {
+}
+
+.panel {
     width: 34%;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transform: translateX(100%);
     transition: transform 0.5s;
-    right: -50%; 
+    right: -50%;
     transition: right 0.5s ease-out;
-  }
-  
-  /* CSS-Klassen zur Steuerung der Anzeige */
-  .container.active, .panel.active {
+}
+
+/* CSS-Klassen zur Steuerung der Anzeige */
+.container.active,
+.panel.active {
     display: block;
     visibility: visible;
     opacity: 1;
-  }
+}
 
-  .container.notactive, .panel.notactive {
+.container.notactive,
+.panel.notactive {
     display: none;
     visibility: hidden;
     opacity: 0;
-  }
+}
 
 
-  .panel.active {
+.panel.active {
     width: 34%;
-  }
-  
-  .close-button {
+}
+
+.close-button {
     position: absolute;
     top: 20px;
     right: 20px;
     cursor: pointer;
-  }
+}
 
 
-  .centerAll {
+.centerAll {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -494,10 +500,10 @@ body {
 
 .inputfield-icon {
     position: absolute;
-    right: -10px; 
+    right: -10px;
     top: 50%;
-    transform: translateY(-50%); 
-    width: 18px; 
+    transform: translateY(-50%);
+    width: 18px;
 }
 
 .Name {
@@ -573,7 +579,7 @@ body {
     justify-content: center;
 }
 
-.initials-circle{
+.initials-circle {
     width: 20px;
     height: 20px;
     line-height: 20px;
@@ -585,7 +591,7 @@ body {
     font-size: 16px;
     justify-content: center;
     display: flex;
-    border: 2px solid white; 
+    border: 2px solid white;
 }
 
 .initials-circle-show-contacts {
@@ -600,17 +606,17 @@ body {
     font-size: 50px;
     justify-content: center;
     display: flex;
-    border: 4px solid white; 
+    border: 4px solid white;
     align-items: center;
 }
 
-.contact-info{
+.contact-info {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-li:hover{
+li:hover {
     background-color: #F2F2F2;
     border-radius: 10px;
     cursor: pointer;
@@ -793,10 +799,10 @@ li {
 
 .inputfield-icon-edit {
     position: absolute;
-    right: -10px; 
+    right: -10px;
     top: 50%;
-    transform: translateY(-50%); 
-    width: 18px; 
+    transform: translateY(-50%);
+    width: 18px;
 }
 
 .Name-edit {
@@ -820,7 +826,7 @@ li {
     font-size: 40px;
     justify-content: center;
     display: flex;
-    border: 4px solid white; 
+    border: 4px solid white;
     align-items: center;
 }
 
@@ -991,7 +997,7 @@ li {
     .phoneListAndButton {
         width: 100%;
     }
-    
+
     .showAllContacts {
         width: 80%;
         top: 5%;
