--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -1,18 +1,18 @@
-<nav class="sidebar column space-around">
-  <a href="../../login.html" class="center">
-    <img class="sidebar_logo" src="./assets/img/sidebar_logo.png" />
+<nav id="nav" class="sidebar column space-around">
+  <a href="../../login.html" class="center dontShowJoinLogoOnMobile">
+    <img class="sidebar_logo dontShowJoinLogoOnMobile" src="./assets/img/sidebar_logo.png" />
   </a>
-  <div class="column center menu">
-    <a href="#" onclick="openSummary()" class="sidebar_nav center">
+  <div class="column center-nav menu">
+    <a href="#" onclick="openSummary()" class="sidebar_nav center-nav">
       <img src="./assets/img/summary_icon.png" /><span>Summary</span>
     </a>
-    <a href="#" onclick="openAddTask()" class="sidebar_nav center">
+    <a href="#" onclick="openAddTask()" class="sidebar_nav center-nav">
       <img src="./assets/img/addTask_icon.png" /><span>Add Task</span>
     </a>
-    <a href="#" onclick="openBoard()" class="sidebar_nav center">
+    <a href="#" onclick="openBoard()" class="sidebar_nav center-nav">
       <img src="./assets/img/board_icon.png" /><span>Board</span>
     </a>
-    <a href="#" onclick="openContacts()" class="sidebar_nav center">
+    <a href="#" onclick="openContacts()" class="sidebar_nav center-nav">
       <img src="./assets/img/contacts_icon.png" /><span>Contacts</span>
     </a>
   </div>
