--- a/css/board.css
+++ b/css/board.css
@@ -145,6 +145,10 @@ width: auto;
 cursor: pointer;
 }
 
+.tasks-board:hover{
+    transform: rotate(5deg);
+}
+
 .height-board{
     height: 48px;
 }
@@ -636,20 +640,7 @@ background-repeat: no-repeat;
 -webkit-appearance: none !important;
 }
 
-.subtask-input{
-    box-sizing: border-box;
-display: flex;
-flex-direction: row;
-align-items: center;
-padding: 12px 21px;
-gap: 10px;
-height: 48px;
-background: #FFFFFF;
-border: 1px solid #D1D1D1;
-border-radius: 10px;
-flex: none;
-padding-right: 110px;
-}
+
 
 .position-relative-board{
     position: relative;
@@ -989,6 +980,22 @@ width: 300px;
     height: 80px;
     left: 0px;
     top: 336px;
+}
+
+.subtask-input{
+    box-sizing: border-box;
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 12px 21px;
+gap: 10px;
+height: 48px;
+background: #FFFFFF;
+border: 1px solid #D1D1D1;
+border-radius: 10px;
+flex: none;
+padding-right: 110px;
+width: 440px;
 }
 
 .add-subtasks-btn {
