--- a/css/board.css
+++ b/css/board.css
@@ -1019,7 +1019,7 @@ border: 1px solid #D1D1D1;
 border-radius: 10px;
 flex: none;
 padding-right: 110px;
-width: 440px;
+width: 300px;
 }
 
 .add-subtasks-btn {
@@ -1195,4 +1195,89 @@ width: 440px;
     z-index: 999;
     background-color: #2A3647;
     color: #FFFFFF;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.searchInput {
+    padding-left: 18px;
+    width: 440px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+}
+
+.contactsInputField {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 440px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    flex: none;
+}
+
+.dropdownIcon {
+    position: absolute;
+    width: 24px;
+    cursor: pointer;
+    right: 8px;
+}
+
+.dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    max-height: 170px;
+    overflow-y: auto;
+    width: 438px;
+}
+
+.show {
+    display: block;
+}
+
+.selectedDropdownContent {
+    background-color: #2A3647;
+    color: #FFFFFF;
+
+}
+
+.dropdownContent span {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 16px 8px 18px;
+    cursor: pointer;
+}
+
+.dropdownContent span:hover {
+    background-color: #29ABE2;
+}
+
+.selectedContactsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    padding: 8px;
+}
+
+.selectedContact {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
 }
