--- a/css/board.css
+++ b/css/board.css
@@ -582,7 +582,27 @@ cursor: pointer;
     background-color: white;
     border-radius: 10px;
     overflow-y: auto;
+    overflow-x: hidden;
+    height: 450px;
 }
+
+::-webkit-scrollbar {
+    height: 2px;
+    width: 12px;
+    background: rgb(231, 231, 231);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(168,168,168);
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
+}
+
+
 
 .column-edit {
     display: flex;
@@ -701,10 +721,15 @@ cursor: pointer;
     color: white !important;
 }
 
+.saveDiv{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
 .ok-button {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -725,6 +750,31 @@ cursor: pointer;
 
 .ok-button:hover {
     background-color: rgb(13, 153, 255);
+}
+
+.subtask-div{
+    border-radius: 10px;
+    padding: 4px;
+}
+
+.subtask-div:hover{
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.grey-line{
+    width: 1px;
+    height: 19px;
+    background-color: #676767;
+}
+
+.visibility{
+    visibility: hidden;
+    gap: 4px;
+}
+
+.subtask-div:hover .visibility {
+    visibility: visible;
 }
 
 /* addTask-Container */
@@ -1266,7 +1316,7 @@ width: 300px;
     z-index: 1;
     max-height: 170px;
     overflow-y: auto;
-    width: 438px;
+    width: 100%;
 }
 
 .show {
