Responsive on AddTask and LegalNotice

--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -3,24 +3,24 @@
     <img class="sidebar_logo dontShowJoinLogoOnMobile" src="./assets/img/sidebar_logo.png" />
   </a>
   <div class="column center-nav menu">
-    <a href="#" onclick="openSummary()" class="sidebar_nav center-nav">
+    <a href="#" onclick="openSummary()" id="navSummary" class="sidebar_nav center-nav">
       <img src="./assets/img/summary_icon.png" /><span>Summary</span>
     </a>
-    <a href="#" onclick="openAddTask()" class="sidebar_nav center-nav">
+    <a href="#" onclick="openAddTask()" id="navAddTask" class="sidebar_nav center-nav">
       <img src="./assets/img/addTask_icon.png" /><span>Add Task</span>
     </a>
-    <a href="#" onclick="openBoard()" class="sidebar_nav center-nav">
+    <a href="#" onclick="openBoard()" id="navBoard" class="sidebar_nav center-nav">
       <img src="./assets/img/board_icon.png" /><span>Board</span>
     </a>
-    <a href="#" onclick="openContacts()" class="sidebar_nav center-nav">
+    <a href="#" onclick="openContacts()" id="navContacts" class="sidebar_nav center-nav">
       <img src="./assets/img/contacts_icon.png" /><span>Contacts</span>
     </a>
   </div>
   <div class="data">
-    <div class="data_nav">
+    <div id="navPP" class="data_nav">
       <a href="../../privacy_policy.html">Privacy Policy</a>
     </div>
-    <div class="data_nav">
+    <div id="navLN" class="data_nav">
       <a href="../../legal_notice.html">Legal Notice</a>
     </div>
   </div>
