--- a/css/add_task.css
+++ b/css/add_task.css
@@ -63,6 +63,10 @@ li p {
     justify-content: flex-start;
 }
 
+#navAddTask {
+    color: #32aee3;
+}
+
 .titleInputAddTask {
     box-sizing: border-box;
     display: flex;
@@ -166,7 +170,7 @@ li p {
 }
 
 .fieldRequiredText {
-    margin-top: 110px;
+    margin-top: 120px;
     width: 170px;
     height: 27px;
     font-family: 'Inter';
