finished responsive for addTask,LN,PP. overall design updates to match style on all pages

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -8,7 +8,7 @@
 </header>
 
 <div id="help-menu-bar" class="help-click d-none">
-  <a href="./legal_notice.html" class="help-link">Legal Notice</a>
-  <a href="./privacy_policy.html" class="help-link">Privacy Policy</a>
+  <a href="./legal_notice.html" id="navLN" class="help-link">Legal Notice</a>
+  <a href="./privacy_policy.html" id="navPP" class="help-link">Privacy Policy</a>
   <a href="./Login.html" class="help-link">Log out</a>
 </div>
