--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -17,11 +17,11 @@
     </a>
   </div>
   <div class="data">
-    <div id="navPP" class="data_nav">
-      <a href="../../privacy_policy.html">Privacy Policy</a>
+    <div class="data_nav">
+      <a href="../../privacy_policy.html" id="navPP">Privacy Policy</a>
     </div>
-    <div id="navLN" class="data_nav">
-      <a href="../../legal_notice.html">Legal Notice</a>
+    <div class="data_nav">
+      <a href="../../legal_notice.html" id="navLN">Legal Notice</a>
     </div>
   </div>
 </nav>
