--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -44,23 +44,26 @@ a {
 
 .privacyPolicyContentContainer {
     display: flex;
-    height: 100vh;
-    width: auto;
-
+    flex-direction: column;
+    position: absolute;
+    top: 96px;
+    bottom: 0;
+    right: 0;
+    left: 232px;
+    margin: 110px 0 0 96px;
+    max-width: 978px;
+    gap: 32px;
 }
 
 .ppHeadlineContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 0px;
     gap: 30px;
-    position: absolute;
-    width: 419px;
+    width: 990px;
     height: 73px;
-    left: 328px;
-    top: 206px;
 }
 
 .ppHeadline {
@@ -72,17 +75,11 @@ a {
     font-size: 61px;
     line-height: 120%;
     color: #000000;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
 }
 
 .backArrow {
-    position: absolute;
     width: 37px;
     height: 37px;
-    left: 1307px;
-    top: 225px;
 }
 
 .backArrow img {
@@ -101,12 +98,9 @@ a {
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 35px;
-    position: absolute;
-    width: 1016px;
+    gap: 24px;
+    width: 1014px;
     height: 720px;
-    left: 328px;
-    top: 311px;
     overflow: auto;
 }
 
@@ -128,6 +122,6 @@ a {
     color: #000000;
 }
 
-#navPP a {
+#navPP {
     color: #32aee3;
 }
