--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-  <img class="JoinLogoHeaderImg" src="assets/img/JoinLogoMobile.png">
+  <a href="../../summary.html" rel="noopener noreferrer"><img class="JoinLogoHeaderImg" src="assets/img/JoinLogoMobile.png"></a>
   <span class="headline">Kanban Project Management Tool</span>
   <div class="center fixed-width-104">
     <a href="../../help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
